Fix: Adjust tab name positioning and increase z-index for close button

--- a/src/tab_style.css
+++ b/src/tab_style.css
@@ -77,13 +77,21 @@ body {
 	transform: translateY(-50%);
 }
 
+#tabs .tab .name {
+	position: absolute;
+	top: 50%;
+	left: 3%;
+	transform: translateY(-50%);
+	user-select: none;
+}
+
 #tabs .tab .close {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
 	right: 5%;
 	user-select: none;
-	z-index: 10;
+	z-index: 50;
 }
 
 #tabadd {
